[BUGFIX] remove visible OL in donation form  #51586

--- a/resources/form/style_form_accordion.css
+++ b/resources/form/style_form_accordion.css
@@ -54,7 +54,7 @@
 	padding-left: 15px;
 }
 
-.tx-donation-pi-form ol {
+.tx-donation-pi-form ol li, .tx-donation-pi-form ol li.csc-mailform-field.b-form-row {
 	list-style: none;
 }
 
